refactor: update FeedbackServiceTest to use List.of() and Collections.singletonList()